# vikey-mcp-server

./: README.md  pyproject.toml
.github/workflows/: bump-version.yml  publish.yml
src/vikey_mcp_server/: __init__.py  main.py
