[project]
name = "vikey-mcp-server"
version = "0.1.3"
description = "MCP Server per gestire le API di Vikey"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["fastmcp>=0.4.1", "httpx>=0.27.0"]

# QUESTO È IL BLOCCO CRUCIALE PER UVX
[project.scripts]
vikey-mcp-server = "vikey_mcp_server.main:main"
